render user image and format prediction

--- a/templates/predict.html
+++ b/templates/predict.html
@@ -15,12 +15,12 @@
 
     <div class="col-sm">
       <span class="border border-primary">
-        <img src="/static/nejmoa2001191_f4.jpeg" alt={{file_name}} class="img-thumbnail">
+        <img src={{user_image}} alt={{file_name}} class="img-thumbnail">
       </span>
     </div>
 
     <div class="col-sm">
-      <h1>Report: <span class="badge badge-secondary">{{product}}</span></h1>
+      <h1>Report: <span class="badge badge-secondary">{{prediction}}</span></h1>
     </div>
 
   </div>
