decrease epoch for local server and add some css

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,13 @@
 <html>
 <head>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>Upload Image</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">    
+  <title>Chest X-Ray Predictor</title>
 </head>
 <body>
-    <div class="col-sm">
-      <h1><span class="badge badge-danger">Chest X-Ray Predictor</span></h1>
-    </div>
-    <div class="col-sm">
+    <h1>Chest X-Ray Predictor</h1>
+    <div class="col">
       <form action = "/predict" method = "post" enctype="multipart/form-data">
           <input type="file" name="file" />
           <input type = "submit" value="Upload">
