--- a/templates/predict.html
+++ b/templates/predict.html
@@ -4,25 +4,22 @@
   <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="predict.css">
     <title>Chest X-Ray Predictor</title>
   </head>
   <body>
   
     <div class="container">
-    <div class="row">
   
-      <div class="col-sm">
-        <span class="border border-primary">
+      <div class="img">
           <img src={{user_image}} alt={{file_name}} class="img-thumbnail">
-        </span>
       </div>
   
-      <div class="col-sm">
+      <div class="text">
         <h1>Report: <span class="badge badge-secondary">{{prediction}}</span></h1>
       </div>
   
-    </div>
   </div>
   
   </body>
