--- a/static/style.css
+++ b/static/style.css
@@ -11,6 +11,6 @@ body {
     font-family: 'Open Sans';
     font-weight: lighter;
     color: white;
-    background-color: #2d2926;
+    background-color: #000518;
 }
 
