--- a/static/predict.css
+++ b/static/predict.css
@@ -11,27 +11,22 @@ body {
     font-family: 'Open Sans';
     font-weight: lighter;
     color: white;
-    background-color: #2d2926;
+    background-color: #000518;
 }
 
-.container {
+.aligned {
     display: flex;
     align-items: center;
-    justify-content: center
-  }
+}
+
+img {
+    height: auto; 
+    width: auto; 
+    max-width: 300px; 
+    max-height: 300px;
+}
   
-  img {
-    max-width: 100%
-  }
-  
-  .image {
-    flex-basis: 40%
-  }
-  
-  .text {
+span {
+    padding: 50px;
     font-size: 20px;
-    padding-left: 20px;
-  }
-
-
-
+}
