--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,11 @@
   <title>Chest X-Ray Predictor</title>
 </head>
 <body>
-    <h1>Chest X-Ray Predictor</h1>
+    <h1>Covid-19 or Pneumonia</h1>
     <div class="col">
       <form action = "/predict" method = "post" enctype="multipart/form-data">
           <input type="file" name="file" />
-          <input type = "submit" value="Upload">
+          <input type = "submit" value="Predict">
       </form>
     </div>
 </body>
