--- a/templates/predict.html
+++ b/templates/predict.html
@@ -1,26 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="predict.css">
-    <title>Chest X-Ray Predictor</title>
-  </head>
-  <body>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" type= "text/css" href="{{ url_for('static',filename='predict.css') }}">
+  <title>Prediction</title>
+</head>
   
-    <div class="container">
-  
-      <div class="img">
-          <img src={{user_image}} alt={{file_name}} class="img-thumbnail">
-      </div>
-  
-      <div class="text">
-        <h1>Report: <span class="badge badge-secondary">{{prediction}}</span></h1>
-      </div>
-  
-  </div>
-  
-  </body>
-  </html>
+<body>
+    <div class="aligned">
+      <img src={{user_image}} alt={{file_name}}>
+      <span>Report: {{prediction}}</span>
+    </div>
+</body>
+ 
+</html>
