redirect to home page

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
   <title>Chest X-Ray Predictor</title>
 </head>
 <body>
-    <h1>Covid-19 or Pneumonia</h1>
+    <h1>Chest X-Ray Predictor</h1>
     <div class="col">
       <form action = "/predict" method = "post" enctype="multipart/form-data">
           <input type="file" name="file" />
