--- a/templates/predict.html
+++ b/templates/predict.html
@@ -9,10 +9,14 @@
 </head>
   
 <body>
+
     <div class="aligned">
       <img src={{user_image}} alt={{file_name}}>
       <span>Report: {{prediction}}</span>
     </div>
-</body>
- 
+    <div class="return">
+      <button type="button" onclick="history.back()">Submit another image</button>
+    </div>
+
+  </body>
 </html>
